<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Meridian</string>

    <string name="meridian_pwa">Weather &amp; Air Quality</string>

    <string name="earthquake">Natural Calamity</string>

    <string name="elevation">Elevation</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <string name="action_settings">Settings</string>
    <string name="activity_refresh">Refresh</string>
    <string name="activity_latitude">Latitude</string>
    <string name="activity_longitude">Longitude</string>
    <string name="activity_elevation">Elevation</string>
    <string name="activity_accuracy">Accuracy</string>
    <string name="pref_unitsTitle">Units</string>
    <string name="pref_unitsDialogTitle">Units</string>
    <string-array name="pref_units_entries">
        <item>meters</item>
        <item>feet</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>meters</item>
        <item>feet</item>
    </string-array>
    <string name="pref_units_default">meters</string>
    <string name="title_activity_settings">SettingsActivity</string>
        <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for Meridian Peer chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="action_add_contact">Add Contact</string>
    <string name="bottom_panel_title">Contacts</string>

</resources>
