<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imageView3"
        android:layout_marginEnd="60dp"
        android:text="@string/activity_refresh" />

    <LinearLayout
        android:id="@+id/latitudeRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/longitudeRow"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-194dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_latitude"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitudeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/longitudeRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="194dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_longitude"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitudeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/elevationRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitudeRow"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/activity_elevation"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/elevationDisplay" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/elevationUnitsDisplay" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/elevationRow"
        android:id="@+id/accuracyRow"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/activity_accuracy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/accuracyDisplay" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/accuracyUnitsDisplay" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="169dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/latitudeRow"
        android:src="@drawable/altitude" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="129dp"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignStart="@+id/button"
        android:layout_gravity="center"
        android:paddingRight="10dp"
        android:text="PLACE : Mumbai"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="62dp"
        android:layout_marginEnd="26dp"
        android:text="MOUNT EVEREST HEIGHT:"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="310dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="-60dp"
        android:text="METERS : 8848 m;"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:layout_alignEnd="@+id/latitudeRow"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="-28dp"
        android:text="FEET: 29,029 ft;"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>
